--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
-.idea/*
-!.idea/copyright
-!.idea/externalDependencies.xml
-!.idea/icon.png
-!.idea/runConfigurations
+**/.idea/*
+**/!.idea/copyright
+!**/.idea/externalDependencies.xml
+!**/.idea/icon.png
+!**/.idea/runConfigurations
 *.iml
 *.ipr
 *.iws
-out/
+**/out/
 *.class
 hs_err_pid*
-.gradle
+**/.gradle
 **/build/
+**/cmake-build-*
 secrets.gradle.kts
 .sandbox/
 JetBrains-Discord-Integration-*.zip
 bot/config.yaml
-plugin/src/generated/
+**/src/generated/
