--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,71 @@
-**/.idea/*
-**/!.idea/copyright
-!**/.idea/externalDependencies.xml
-!**/.idea/icon.png
-!**/.idea/runConfigurations
+#
+# Copyright 2015 the original author or authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+### Intellij ###
+## Folder-based project format
+.idea/*
+
+# Copyright settings
+!.idea/copyright
+
+# Required plugins
+!.idea/externalDependencies.xml
+
+# Plugin icon
+!.idea/icon.png
+
+# Plugin icon
+!.idea/runConfigurations
+
+## File-based project format
 *.iml
 *.ipr
 *.iws
-**/out/
+
+## IntelliJ build output
+out/
+
+### Kotlin ###
+## Compiled class file
 *.class
+
+### Java ###
+## virtual machine crash logs, see https://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-**/.gradle
+
+### Gradle ###
+## Gradle cache
+.gradle
+
+## Gradle build output
 **/build/
-**/cmake-build-*
+
+### Project Files ###
+
+## Tokens
 secrets.gradle.kts
+
+## IntelliJ Sandbox
 .sandbox/
+
+## Plugin .zip
 JetBrains-Discord-Integration-*.zip
+
+## Bot config
 bot/config.yaml
-**/src/generated/
+
+## ANTLR-generated sources
+plugin/src/generated/
