--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -1,3 +1,19 @@
+<!--
+  ~ Copyright 2017-2020 Aljoscha Grebe
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~   https://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <idea-plugin url="https://github.com/Almighty-Alpaca/JetBrains-Discord-Integration" require-restart="true">
     <id>com.almightyalpaca.intellij.plugins.discord</id>
     <name>Discord Integration</name>
@@ -11,26 +27,18 @@
 
     <applicationListeners>
         <listener
-                class="com.almightyalpaca.jetbrains.plugins.discord.plugin.diagnose.DiagnoseAppLifecycleListener"
-                topic="com.intellij.ide.AppLifecycleListener"/>
-
-        <listener
-                class="com.almightyalpaca.jetbrains.plugins.discord.plugin.render.RenderAppLifecycleListener"
-                topic="com.intellij.ide.AppLifecycleListener"/>
-
-        <listener
                 class="com.almightyalpaca.jetbrains.plugins.discord.plugin.development.PreventUnloadingDynamicPluginListener"
                 topic="com.intellij.ide.plugins.DynamicPluginListener"/>
 
+        <!--
         <listener
                 class="com.almightyalpaca.jetbrains.plugins.discord.plugin.time.TimeDynamicPluginListener"
                 topic="com.intellij.ide.plugins.DynamicPluginListener"/>
+        -->
         <listener
                 class="com.almightyalpaca.jetbrains.plugins.discord.plugin.time.TimeProjectManagerListener"
                 topic="com.intellij.openapi.project.ProjectManagerListener"/>
-        <listener
-                class="com.almightyalpaca.jetbrains.plugins.discord.plugin.time.TimeAppLifecycleListener"
-                topic="com.intellij.ide.AppLifecycleListener"/>
+
         <listener
                 class="com.almightyalpaca.jetbrains.plugins.discord.plugin.time.TimeFileEditorManagerListener"
                 topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
@@ -61,6 +69,12 @@
 
         <backgroundPostStartupActivity
                 implementation="com.almightyalpaca.jetbrains.plugins.discord.plugin.notifications.NotificationPostStartupActivity"/>
+
+        <preloadingActivity implementation="com.almightyalpaca.jetbrains.plugins.discord.plugin.time.TimePreloadingActivity"/>
+
+        <preloadingActivity implementation="com.almightyalpaca.jetbrains.plugins.discord.plugin.diagnose.DiagnosePreloadingActivity"/>
+
+        <preloadingActivity implementation="com.almightyalpaca.jetbrains.plugins.discord.plugin.render.RenderPreloadingActivity"/>
     </extensions>
 
     <actions>
