--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,52 @@
+#
+# Copyright 2017-2020 Aljoscha Grebe
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#   https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+# suppress inspection "UnusedProperty" for whole file
+
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m
+#org.gradle.configuration-cache=true # Not supported at the moment
+
 kotlin.code.style=official
-versionAntlr=4.10
+
+kotlin.stdlib.default.dependency = false
+
+# IDE releases: https://www.jetbrains.com/intellij-repository/releases or https://www.jetbrains.com/intellij-repository/snapshots
+
+versionAntlr=4.11.1
 versionCommonsIo=2.11.0
-versionCommonsText=1.9
-versionCoroutines=1.3.7
+versionCommonsText=1.10.0
+versionCoroutines=1.6.4
 versionGitVersions=0.15.0
 versionGradle=7.4.2
-versionIde=LATEST-EAP-SNAPSHOT
-versionIntelliJGradle=1.5.2
-versionIpc=e18542f
-versionJackson=2.13.2
+versionIde=2021.3.3
+#versionIde=2022.2.2
+#versionIde=LATEST-EAP-SNAPSHOT
+versionIntelliJGradle=1.10.0-SNAPSHOT
+versionIpc=09bc0cc
+versionJackson=2.13.4
 versionJda=4.4.0_352
-versionJUnit=5.8.2
+versionJUnit=5.9.1
 versionKonf=1.1.2
-versionKotlin=1.6.10
-versionKtor=1.5.2
-versionLogback=1.2.11
-versionOkHttp=4.9.3
+versionKotlin=1.5.10
+versionKtor=2.1.3
+versionLogback=1.4.4
+versionOkHttp=4.10.0
 versionPngtastic=1.6
 versionRpc=2.0.2
 versionShadow=7.0.0
-versionVersions=0.42.0
+versionVersions=0.43.0
 versionZeroAllocationHashing=0.11
